examples/lunaParser.py
# Generated from luna.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class lunaParser ( Parser ):

    grammarFileName = "luna.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'const'", "'var'", "'i32'", "'i64'", 
                     "'+'", "'-'", "'*'", "'/'", "'('", "')'", "'='", "';'", 
                     "'func'", "','", "'<'", "'>'", "'<='", "'>='", "'!='", 
                     "'=='", "'%'", "'if'", "'else'", "'while'", "'for'", 
                     "'return'", "'break'", "'continue'", "'void'", "'{'", 
                     "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WORD", "INT", "STRING", "WS" ]

    RULE_program = 0
    RULE_typeModifier = 1
    RULE_allocatorSize = 2
    RULE_expression = 3
    RULE_primaryExpression = 4
    RULE_atom = 5
    RULE_memoryAllocation = 6
    RULE_functionDeclaration = 7
    RULE_anonymysFunctionDeclaration = 8
    RULE_wordWithParameter = 9
    RULE_conditionExpression = 10
    RULE_ifStatement = 11
    RULE_whileStatement = 12
    RULE_assignmentStatement = 13
    RULE_forStatement = 14
    RULE_returnCall = 15
    RULE_breakStatement = 16
    RULE_continueStatement = 17
    RULE_parameters = 18
    RULE_parameter = 19
    RULE_modifier = 20
    RULE_type = 21
    RULE_typeParameters = 22
    RULE_block = 23
    RULE_operationStatement = 24
    RULE_statement = 25

    ruleNames =  [ "program", "typeModifier", "allocatorSize", "expression", 
                   "primaryExpression", "atom", "memoryAllocation", "functionDeclaration", 
                   "anonymysFunctionDeclaration", "wordWithParameter", "conditionExpression", 
                   "ifStatement", "whileStatement", "assignmentStatement", 
                   "forStatement", "returnCall", "breakStatement", "continueStatement", 
                   "parameters", "parameter", "modifier", "type", "typeParameters", 
                   "block", "operationStatement", "statement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    WORD=32
    INT=33
    STRING=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(lunaParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lunaParser.StatementContext)
            else:
                return self.getTypedRuleContext(lunaParser.StatementContext,i)


        def getRuleIndex(self):
            return lunaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = lunaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4819263494) != 0):
                self.state = 52
                self.statement()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(lunaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return lunaParser.RULE_typeModifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeModifier" ):
                listener.enterTypeModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeModifier" ):
                listener.exitTypeModifier(self)




    def typeModifier(self):

        localctx = lunaParser.TypeModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_typeModifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllocatorSizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return lunaParser.RULE_allocatorSize

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllocatorSize" ):
                listener.enterAllocatorSize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllocatorSize" ):
                listener.exitAllocatorSize(self)




    def allocatorSize(self):

        localctx = lunaParser.AllocatorSizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_allocatorSize)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self):
            return self.getTypedRuleContext(lunaParser.PrimaryExpressionContext,0)


        def wordWithParameter(self):
            return self.getTypedRuleContext(lunaParser.WordWithParameterContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lunaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(lunaParser.ExpressionContext,i)


        def getRuleIndex(self):
            return lunaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = lunaParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 65
                self.primaryExpression(0)
                pass

            elif la_ == 2:
                self.state = 66
                self.wordWithParameter()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 77
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 75
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = lunaParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 69
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 70
                        self.match(lunaParser.T__4)
                        self.state = 71
                        self.expression(3)
                        pass

                    elif la_ == 2:
                        localctx = lunaParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 72
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 73
                        self.match(lunaParser.T__5)
                        self.state = 74
                        self.expression(2)
                        pass

             
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PrimaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(lunaParser.AtomContext,0)


        def anonymysFunctionDeclaration(self):
            return self.getTypedRuleContext(lunaParser.AnonymysFunctionDeclarationContext,0)


        def primaryExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lunaParser.PrimaryExpressionContext)
            else:
                return self.getTypedRuleContext(lunaParser.PrimaryExpressionContext,i)


        def getRuleIndex(self):
            return lunaParser.RULE_primaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpression" ):
                listener.enterPrimaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpression" ):
                listener.exitPrimaryExpression(self)



    def primaryExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = lunaParser.PrimaryExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_primaryExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 81
                self.atom()
                pass

            elif la_ == 2:
                self.state = 82
                self.anonymysFunctionDeclaration()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 93
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 91
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = lunaParser.PrimaryExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_primaryExpression)
                        self.state = 85
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 86
                        self.match(lunaParser.T__6)
                        self.state = 87
                        self.primaryExpression(3)
                        pass

                    elif la_ == 2:
                        localctx = lunaParser.PrimaryExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_primaryExpression)
                        self.state = 88
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 89
                        self.match(lunaParser.T__7)
                        self.state = 90
                        self.primaryExpression(2)
                        pass

             
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(lunaParser.INT, 0)

        def STRING(self):
            return self.getToken(lunaParser.STRING, 0)

        def WORD(self):
            return self.getToken(lunaParser.WORD, 0)

        def expression(self):
            return self.getTypedRuleContext(lunaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return lunaParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)




    def atom(self):

        localctx = lunaParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atom)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(lunaParser.INT)
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(lunaParser.STRING)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.match(lunaParser.WORD)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.match(lunaParser.T__8)
                self.state = 100
                self.expression(0)
                self.state = 101
                self.match(lunaParser.T__9)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemoryAllocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeModifier(self):
            return self.getTypedRuleContext(lunaParser.TypeModifierContext,0)


        def WORD(self):
            return self.getToken(lunaParser.WORD, 0)

        def expression(self):
            return self.getTypedRuleContext(lunaParser.ExpressionContext,0)


        def allocatorSize(self):
            return self.getTypedRuleContext(lunaParser.AllocatorSizeContext,0)


        def getRuleIndex(self):
            return lunaParser.RULE_memoryAllocation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemoryAllocation" ):
                listener.enterMemoryAllocation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemoryAllocation" ):
                listener.exitMemoryAllocation(self)




    def memoryAllocation(self):

        localctx = lunaParser.MemoryAllocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_memoryAllocation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.typeModifier()
            self.state = 106
            self.match(lunaParser.WORD)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3 or _la==4:
                self.state = 107
                self.allocatorSize()


            self.state = 110
            self.match(lunaParser.T__10)
            self.state = 111
            self.expression(0)
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 112
                self.match(lunaParser.T__11)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(lunaParser.WORD, 0)

        def block(self):
            return self.getTypedRuleContext(lunaParser.BlockContext,0)


        def parameters(self):
            return self.getTypedRuleContext(lunaParser.ParametersContext,0)


        def type_(self):
            return self.getTypedRuleContext(lunaParser.TypeContext,0)


        def modifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lunaParser.ModifierContext)
            else:
                return self.getTypedRuleContext(lunaParser.ModifierContext,i)


        def getRuleIndex(self):
            return lunaParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):

        localctx = lunaParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 116 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 115
                    self.modifier()
                    self.state = 118 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==32):
                        break



            self.state = 122
            self.match(lunaParser.T__12)
            self.state = 123
            self.match(lunaParser.WORD)
            self.state = 124
            self.match(lunaParser.T__8)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 125
                self.parameters()


            self.state = 128
            self.match(lunaParser.T__9)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4831846424) != 0):
                self.state = 129
                self.type_()


            self.state = 132
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnonymysFunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(lunaParser.BlockContext,0)


        def WORD(self):
            return self.getToken(lunaParser.WORD, 0)

        def parameters(self):
            return self.getTypedRuleContext(lunaParser.ParametersContext,0)


        def type_(self):
            return self.getTypedRuleContext(lunaParser.TypeContext,0)


        def getRuleIndex(self):
            return lunaParser.RULE_anonymysFunctionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnonymysFunctionDeclaration" ):
                listener.enterAnonymysFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnonymysFunctionDeclaration" ):
                listener.exitAnonymysFunctionDeclaration(self)




    def anonymysFunctionDeclaration(self):

        localctx = lunaParser.AnonymysFunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_anonymysFunctionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 134
                self.match(lunaParser.T__12)


            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 137
                self.match(lunaParser.WORD)


            self.state = 140
            self.match(lunaParser.T__8)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 141
                self.parameters()


            self.state = 144
            self.match(lunaParser.T__9)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4831846424) != 0):
                self.state = 145
                self.type_()


            self.state = 148
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WordWithParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(lunaParser.WORD, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lunaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(lunaParser.ExpressionContext,i)


        def getRuleIndex(self):
            return lunaParser.RULE_wordWithParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWordWithParameter" ):
                listener.enterWordWithParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWordWithParameter" ):
                listener.exitWordWithParameter(self)




    def wordWithParameter(self):

        localctx = lunaParser.WordWithParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_wordWithParameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(lunaParser.WORD)
            self.state = 151
            self.match(lunaParser.T__8)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30064779776) != 0):
                self.state = 152
                self.expression(0)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 153
                    self.match(lunaParser.T__13)
                    self.state = 154
                    self.expression(0)
                    self.state = 159
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 162
            self.match(lunaParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lunaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(lunaParser.ExpressionContext,i)


        def getRuleIndex(self):
            return lunaParser.RULE_conditionExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionExpression" ):
                listener.enterConditionExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionExpression" ):
                listener.exitConditionExpression(self)




    def conditionExpression(self):

        localctx = lunaParser.ConditionExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_conditionExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.expression(0)
            self.state = 165
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4161536) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 166
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditionExpression(self):
            return self.getTypedRuleContext(lunaParser.ConditionExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lunaParser.BlockContext)
            else:
                return self.getTypedRuleContext(lunaParser.BlockContext,i)


        def getRuleIndex(self):
            return lunaParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = lunaParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(lunaParser.T__21)
            self.state = 169
            self.conditionExpression()
            self.state = 170
            self.block()
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 171
                self.match(lunaParser.T__22)
                self.state = 172
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditionExpression(self):
            return self.getTypedRuleContext(lunaParser.ConditionExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(lunaParser.BlockContext,0)


        def getRuleIndex(self):
            return lunaParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = lunaParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(lunaParser.T__23)
            self.state = 176
            self.conditionExpression()
            self.state = 177
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(lunaParser.WORD, 0)

        def expression(self):
            return self.getTypedRuleContext(lunaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return lunaParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)




    def assignmentStatement(self):

        localctx = lunaParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assignmentStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(lunaParser.WORD)
            self.state = 180
            self.match(lunaParser.T__10)
            self.state = 181
            self.expression(0)
            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 182
                self.match(lunaParser.T__11)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(lunaParser.BlockContext,0)


        def memoryAllocation(self):
            return self.getTypedRuleContext(lunaParser.MemoryAllocationContext,0)


        def conditionExpression(self):
            return self.getTypedRuleContext(lunaParser.ConditionExpressionContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(lunaParser.AssignmentStatementContext,0)

